fixed columns getting squished when created excessively.

--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body{
 }
 
 #main-grid{
-    min-width: min-content;
-    width: 100%;
+    width: 10px;
+    min-width: 98%;
     display: grid;
     gap: 15px;
-    grid-template-columns: auto;
+    grid-template-columns: repeat(auto-fit, 200px);
     border: none;
     border-left: solid 1px white;
     padding: 5px;
@@ -17,7 +17,7 @@ body{
 
 #add-input-lane-button{
     height: 50px;
-    min-width: 50px;
+    min-width: 200px;
 }
 
 #add-input-lane-button:hover{
@@ -46,7 +46,7 @@ body{
 
 .input-flow-display{
     height: 50px;
-    min-width: 50px;
+    min-width: 200px;
     grid-row: 1/2;
 }
 
@@ -92,6 +92,7 @@ body{
 
 .loop-back-target{
     height: 50px;
+    width: 200px;
     border: solid white 1px;
     background-color: rgb(175, 101, 175);
 }
